[gd_scene load_steps=6 format=2]

[ext_resource path="res://FeatureFlagsTutorial.gd" type="Script" id=1]
[ext_resource path="res://font/Oswald-Bold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 200
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 2 )

[node name="FeatureFlagsTutorial" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
margin_left = 409.0
margin_top = 109.0
margin_right = 614.0
margin_bottom = 491.0

[node name="ScoreLabel" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_right = 205.0
margin_bottom = 297.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="Button" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_top = 301.0
margin_right = 205.0
margin_bottom = 382.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "Click me!"

[node name="IsDemoLabel" type="Label" parent="CanvasLayer"]
margin_left = 384.0
margin_top = 40.0
margin_right = 627.0
margin_bottom = 163.0
custom_fonts/font = SubResource( 3 )
text = "FULL GAME
much wow"
align = 1
valign = 1

[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
